# fop2024-project-zahediadib

./: CMakeLists.txt  README.md  main.c
data/: color.txt  diff.txt  music.txt  score.txt  toggle.txt  users.txt
headers/: game.h  menus.h  user.h  utils.h
include/ncursesw/: curses.h
src/: game.c  leaderboard_menu.c  lose_menu.c  main_menu.c  menus.c  profile_menu.c  settings_menu.c  signin_menu.c  signup_menu.c  utils.c  win_menu.c
